<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:shrinkColumns="*"
    android:stretchColumns="*" >

  
    <!-- Row 1 with single column -->

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#d3d3d3"
        android:gravity="left"
        android:textColor="#000000" >

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="60dp"
            android:layout_height="60dp" />

        <TextView
            android:id="@+id/title"
            android:gravity="left"
            android:text="@string/Title"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/heurPub"
            android:gravity="left"
            android:textSize="10dp"
            android:text="30/06/2014 18:45" />

    </TableRow>

    <!-- Row 2 with 2 columns -->

    <TableRow
        android:id="@+id/tableRow1"
        android:background="#d3d3d3"
        android:textColor="#000000" >

        <TextView
            android:id="@+id/contenu"
            android:layout_height="150dp"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
             android:layout_marginBottom="6dp"
            android:layout_span="3"
            android:maxHeight="150dp"
            android:text="@string/Description"
            android:textSize="16dp" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow10"
        android:background="#d3d3d3"
        android:textColor="#000000" >

        <ImageView
            android:id="@+id/newspic"
            android:layout_span="3" />
    </TableRow>

    <TableRow android:layout_marginTop="1dp" />

    <TableRow
        android:id="@+id/tableRow2"
        android:background="#d3d3d3"
        android:textColor="#000000"  
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        >

        <ToggleButton
            android:id="@+id/toggleButton1"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textOff="@string/plusun"
            android:textOn="@string/plusun" 
          
            />

        <ImageButton
            android:id="@+id/plus"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/equal"
            android:onClick="Pub"
            
            
             />

        <TextView
            android:id="@+id/nbcommentaires"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="8"
            android:textSize="20sp" 
          
           
            />

    </TableRow>

    <TableRow android:layout_marginTop="2dp" />

</TableLayout>